# example-package-douglasrfix-1

./: LICENSE  README.md  pyproject.toml
src/Test/: __main__.py  hello.py
src/example_package_douglasrfix_1.egg-info/: PKG-INFO  SOURCES.txt
